# adler

./: .dockerignore  .editorconfig  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  PLAN.md  README.md  SECURITY.md  audit.toml  package-lock.json  package.json  release-plz.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  site-request.yml
.github/workflows/: audit.yml  bench.yml  ci.yml  codeql.yml  doctor.yml  fuzz.yml  release-plz.yml  release.yml  scorecard.yml  validate-sites.yml
adler-cli/: Cargo.toml  build.rs
adler-cli/src/: doctor.rs  investigation_report.rs  main.rs  output.rs  report.rs  scan.rs  transport.rs  tui.rs
adler-cli/tests/: cli.rs
adler-cli/tests/snapshots/: cli__text_uncertain_run.snap
adler-core/: Cargo.toml
adler-core/benches/: correlate.rs  permute.rs  registry.rs  scan.rs
adler-core/data/: sites.json  sites_wmn.json
adler-core/src/: access.rs  avatar.rs  ban.rs  cache.rs  check.rs  client.rs  confidence.rs  correlate.rs  doctor.rs  enrich.rs  error.rs  escalation.rs  executor.rs  history.rs  identity.rs  lib.rs  permute.rs  profile.rs  registry.rs  report.rs  report_render.rs  retry.rs  robots.rs  site.rs  telemetry.rs  test_fixtures.rs  throttle.rs  transport.rs  username.rs  watchlist.rs
adler-core/src/browser/: browserbase.rs  budget.rs  cdp.rs  flaresolverr.rs  local.rs  mock_cdp.rs  mod.rs
adler-core/src/client/: builder.rs  mod.rs  probe.rs  util.rs
adler-core/tests/: json_contracts.rs
adler-core/tests/snapshots/: json_contracts__avatar_hash_evidence_json_contract.snap  json_contracts__avatar_hash_identity_cluster_json_contract.snap  json_contracts__avatar_hash_investigation_report_json_contract.snap  json_contracts__check_outcome_json_contract.snap  json_contracts__identity_cluster_json_contract.snap  json_contracts__investigation_report_json_contract.snap
adler-mcp/: Cargo.toml
adler-mcp/examples/: README.md  probe_http.py  probe_stdio.py
adler-mcp/src/: lib.rs  server.rs  transport.rs
adler-mcp/src/server/: mod.rs  prompts.rs  resources.rs  tools.rs
adler-mcp/src/server/snapshots/: adler_mcp__server__tests__diff_scans_tool_json_contract.snap  adler_mcp__server__tests__get_investigation_report_tool_json_contract.snap  adler_mcp__server__tests__get_investigation_report_tool_markdown_contract.snap  adler_mcp__server__tests__get_scan_history_tool_json_contract.snap  adler_mcp__server__tests__investigation_report_resource_json_contract.snap  adler_mcp__server__tests__scan_by_id_resource_json_contract.snap  adler_mcp__server__tests__scan_diff_resource_json_contract.snap  adler_mcp__server__tests__scan_timeline_resource_json_contract.snap  adler_mcp__server__tools__tests__batch_scan_output_json_contract.snap  adler_mcp__server__tools__tests__outcome_row_json_contract.snap  adler_mcp__server__tools__tests__scan_output_json_contract.snap
adler-server/: .gitignore  Cargo.toml  build.rs
adler-server/benches/: large_artifacts.rs
adler-server/src/: api.rs  assets.rs  error.rs  lib.rs  persist.rs  scan.rs  state.rs
adler-server/src/api/: dto.rs  error.rs  filter.rs  handlers.rs
adler-server/tests/: integration.rs
adler-server/web/: package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
adler-server/web/src/: App.tsx  api.contract.test.ts  api.ts  main.tsx  store.ts  styles.css  types.ts
adler-server/web/src/components/: About.tsx  AccessModal.tsx  AdvancedFilters.tsx  BatchStrip.tsx  ComparePicker.tsx  DatacenterHint.tsx  Hero.tsx  Icons.tsx  IdentityClusterPanel.tsx  ReportExportPanel.tsx  ResultRow.tsx  ResultsList.tsx  ResultsToolbar.tsx  ScanSkeleton.tsx  Toast.tsx  TopBar.tsx
adler-server/web/src/hooks/: useDocumentTitle.ts  useHashRouting.test.ts  useHashRouting.ts  useHistoryPolling.ts  useKeyboardShortcuts.test.ts  useKeyboardShortcuts.ts  useOutcomeBuffer.ts  useResultExport.ts  useScanLifecycle.test.ts  useScanLifecycle.ts
adler-server/web/src/lib/: routes.ts  scanRequest.ts
adler-server/web/src/store/: batchActions.test.ts  batchActions.ts  catalogActions.ts  diffActions.ts  filterActions.test.ts  filterActions.ts  scanActions.test.ts  scanActions.ts  testHelpers.ts  uiActions.ts  viewActions.ts
adler-server/web/src/styles/: base.css  overlays.css  responsive.css  results.css  shell.css  workflow.css
adler-server/web/src/ui/: README.md  tokens.css
adler-server/web/src/ui/primitives/: Button.tsx  Input.tsx  Modal.tsx  SearchInput.tsx  Tabs.tsx  Toast.tsx
adler-server/web/tests/: smoke.spec.ts
adler-web/: index.html  package-lock.json  vite.config.ts
adler-web/src/: App.tsx  api.ts  constants.ts  main.tsx  store.ts  styles.css
adler-web/src/components/: About.tsx  AdvancedFilters.tsx  DatacenterHint.tsx  Footer.tsx  Hero.tsx  HistoryDrawer.tsx  Icons.tsx  NotFound.tsx  ScanHeader.tsx  ShortcutsOverlay.tsx  TopBar.tsx
adler-web/src/lib/: format.ts
adler-web/src/ui/: README.md  index.ts  tokens.css
adler-web/src/ui/primitives/: Chip.tsx  Icon.tsx  IconButton.tsx  Kbd.tsx
bench/: .gitignore  README.md  _orchestrator.py  analyze.py  derive-ground-truth.py  ground-truth.tsv  run.sh  sites.tsv  synthetic-nonsense.txt
bench/adapters/: adler.py  blackbird.py  maigret.py  sherlock.py  snoop.py
docs/: identity-graph-architecture.md  identity-graph-roadmap.md  privacy-retention.md  registry-health-baselines.md  registry-reliability-roadmap.md  security-operations.md  sites.schema.json
fuzz/: Cargo.toml
fuzz/fuzz_targets/: registry_json.rs  site_json.rs  username_permute.rs
scripts/: bench-vs-sherlock-sites.txt  bench-vs-sherlock-usernames.txt  bench-vs-sherlock.sh  changed_sites.py  doctor_aggregate.py  import_maigret.py  import_sherlock.py  import_whatsmyname.py  seed_popularity.py  tag_sites.py  validate_sites_schema.mjs
