[workspace]
resolver = "3"
members = ["adler-core", "adler-cli"]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/commit3296/adler"
homepage = "https://github.com/commit3296/adler"
readme = "README.md"

[workspace.dependencies]
# Async runtime + HTTP — not yet used in Phase 0, kept here so member crates
# pull a single pinned version once we wire detection in Phase 1.
tokio = { version = "1", default-features = false, features = [
    "macros",
    "rt-multi-thread",
    "time",
    "sync",
    "signal",
] }
reqwest = { version = "0.13", default-features = false, features = [
    "rustls",
    "http2",
    "json",
    "gzip",
    "brotli",
    "socks",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
clap = { version = "4", features = ["derive", "env", "wrap_help"] }
clap_complete = "4"
anyhow = "1"
indicatif = "0.18"
fastrand = "2"
ratatui = "0.30"
crossterm = "0.29"
open = "5"
scraper = "0.27"
# Browser backend (bot-protected sites). chromiumoxide drives Chrome via the
# CDP, used by both the local launcher and the Browserbase cloud adapter
# (which exposes a CDP-compatible WebSocket). default features use native-tls
# + bundle a Chromium fetcher; we want neither (we use rustls everywhere, and
# the user provides their own Chrome).
chromiumoxide = { version = "0.9", default-features = false }
# chromiumoxide pulls async-tungstenite without any TLS feature, so
# `Browser::connect(wss://...)` (which Browserbase requires) fails with
# "TLS support not compiled in". Declare it ourselves with rustls +
# webpki-roots so cargo's feature unification gives chromiumoxide TLS.
async-tungstenite = { version = "0.32", default-features = false, features = ["tokio-runtime", "tokio-rustls-webpki-roots"] }
secrecy = "0.10"
async-trait = "0.1"
url = "2"
futures = "0.3"

# Dev-deps
wiremock = "0.6"
insta = { version = "1", features = ["yaml", "filters"] }
assert_cmd = "2"
predicates = "3"
tempfile = "3"
criterion = { version = "0.7", features = ["async_tokio"] }
proptest = "1"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
unreachable_pub = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
# Practical allows — clippy's pedantic/nursery sets have known noisy lints.
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
multiple_crate_versions = "allow"
# nursery: notorious for false positives, often suggests const fn for bodies
# that depend on non-const stdlib methods (e.g. `String::as_str`).
missing_const_for_fn = "allow"
# nursery: contradicts the built-in `unreachable_pub` lint for items inside
# crate-private modules. We use `pub(crate)` deliberately to mark
# internal-but-cross-module visibility.
redundant_pub_crate = "allow"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "abort"

[profile.dev]
debug = "line-tables-only"
