[workspace]
resolver = "3"
members = ["adler-core", "adler-cli", "adler-server", "adler-mcp"]

[workspace.package]
version = "0.13.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/commit3296/adler"
homepage = "https://github.com/commit3296/adler"
readme = "README.md"

[workspace.dependencies]
# Async runtime + HTTP — not yet used in Phase 0, kept here so member crates
# pull a single pinned version once we wire detection in Phase 1.
tokio = { version = "1", default-features = false, features = [
    "macros",
    "rt-multi-thread",
    "time",
    "sync",
    "signal",
] }
reqwest = { version = "0.13", default-features = false, features = [
    "rustls",
    "http2",
    "json",
    "gzip",
    "brotli",
    "socks",
] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
# `parse` + `serde` only — adler reads `--proxy-pool` / `--sessions`
# TOML via serde::Deserialize but never writes any, so we don't need
# the display half of the crate.
toml = { version = "1", default-features = false, features = ["parse", "serde"] }
# Optional impersonate transport (phase 2 — wreq + boring/bindgen).
# Workspace-pinned so the optional dep in adler-core and the feature-
# passthrough in adler-cli use a single version.
wreq = "6.0.0-rc.29"
wreq-util = "3.0.0-rc.12"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "env-filter",
    "fmt",
    "smallvec",
    "std",
] }
clap = { version = "4", features = ["derive", "env", "wrap_help"] }
clap_complete = "4"
clap_mangen = "0.3"
anyhow = "1"
# Default features pull in `unicode-width` + `unicode-segmentation`
# for grapheme-aware spinner widths. Adler uses ASCII spinners only,
# so we drop both and save the tables.
indicatif = { version = "0.18", default-features = false }
fastrand = "2"
open = "5"
scraper = "0.27"
regex = "1"
# Browser backend (bot-protected sites). chromiumoxide drives Chrome via the
# CDP, used by both the local launcher and the Browserbase cloud adapter
# (which exposes a CDP-compatible WebSocket). default features use native-tls
# + bundle a Chromium fetcher; we want neither (we use rustls everywhere, and
# the user provides their own Chrome).
chromiumoxide = { version = "0.9", default-features = false }
# chromiumoxide pulls async-tungstenite without any TLS feature, so
# `Browser::connect(wss://...)` fails with "TLS support not compiled in"
# on cloud-CDP endpoints. Declare async-tungstenite ourselves with rustls
# + webpki-roots so cargo's feature unification gives chromiumoxide TLS.
async-tungstenite = { version = "0.34", default-features = false, features = ["tokio-runtime", "tokio-rustls-webpki-roots"] }
secrecy = "0.10"
async-trait = "0.1"
url = "2"
futures = "0.3"
# Web server (adler-server crate): axum router + SSE. tower-http only
# pulls the features we actually need (CORS for the Vite dev-server,
# request tracing).
axum = { version = "0.8", default-features = false, features = [
    "http1",
    "json",
    "matched-path",
    "tokio",
    "tracing",
    "query",
] }
tower = { version = "0.5", default-features = false, features = ["util"] }
tower-http = { version = "0.6", default-features = false, features = [
    "cors",
    "trace",
] }
tokio-stream = { version = "0.1", default-features = false }
async-stream = "0.3"
# Embed the SolidJS `adler-web/dist/` bundle into the binary so
# `adler --web` ships a self-contained UI.
rust-embed = { version = "8", default-features = false, features = ["debug-embed"] }
# Drop the `rev-mappings` default — adler-server only does extension →
# MIME lookup for serving the embedded SPA, never the reverse direction.
# Saves ~50KB of static MIME tables in the binary.
mime_guess = { version = "2", default-features = false }

# MCP server (adler-mcp crate). The official Rust SDK for the Model
# Context Protocol; pulled into the default `adler-cli` build so
# `adler --mcp` is discoverable without an extra feature flag.
# `schemars` derives JSON Schema for tool argument structs so agents
# get typed parameter descriptions.
rmcp = { version = "1", features = [
    "server",
    "transport-io",
    "transport-streamable-http-server",
    "macros",
    "schemars",
] }
schemars = "1"

# Dev-deps
wiremock = "0.6"
insta = { version = "1", features = ["yaml", "filters"] }
assert_cmd = "2"
predicates = "3"
tempfile = "3"
criterion = { version = "0.7", features = ["async_tokio"] }
proptest = "1"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
unreachable_pub = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
# Practical allows — clippy's pedantic/nursery sets have known noisy lints.
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
multiple_crate_versions = "allow"
# nursery: notorious for false positives, often suggests const fn for bodies
# that depend on non-const stdlib methods (e.g. `String::as_str`).
missing_const_for_fn = "allow"
# nursery: contradicts the built-in `unreachable_pub` lint for items inside
# crate-private modules. We use `pub(crate)` deliberately to mark
# internal-but-cross-module visibility.
redundant_pub_crate = "allow"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "abort"

[profile.dev]
debug = "line-tables-only"
