[package]
name = "adler-mcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Model Context Protocol server for the Adler OSINT username-search engine — exposes scan / list / doctor / history tools, registry + scan-history resources, and OSINT workflow prompts."
categories = ["command-line-utilities", "api-bindings"]
keywords = ["osint", "username", "mcp", "model-context-protocol", "ai"]
readme = "../README.md"

[dependencies]
adler-core = { path = "../adler-core", version = "0.11.7" }
rmcp = { workspace = true }
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["net"] }
thiserror.workspace = true
tracing.workspace = true
futures.workspace = true
# HTTP+SSE transport (StreamableHttpService is a tower::Service; we
# mount it under axum and let axum::serve drive the listener loop).
axum.workspace = true

[dev-dependencies]
tempfile.workspace = true
reqwest = { workspace = true }
tokio = { workspace = true, features = ["test-util", "macros"] }

[lints]
workspace = true
