[package]
name = "adler-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "HTTP API + SSE streaming for the Adler OSINT username-search engine."
categories = ["web-programming::http-server", "command-line-utilities"]
keywords = ["osint", "username", "sherlock", "axum", "sse"]
readme = "../README.md"
# Internal workspace member — embedded into `adler-cli` via rust-embed
# of the sibling `adler-web/dist/` directory. Publishing standalone
# would require shipping the frontend build (or a separate
# build-script that runs `npm`), neither of which fits the
# crates.io distribution model today. Re-enable when there's a
# concrete external consumer that wants to embed the API server.
publish = false

[dependencies]
adler-core = { path = "../adler-core", version = "0.8.0" }
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
tokio = { workspace = true, features = ["net"] }
tokio-stream.workspace = true
async-stream.workspace = true
futures.workspace = true
rust-embed.workspace = true
mime_guess.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
fastrand.workspace = true

[dev-dependencies]
reqwest = { workspace = true, features = ["stream"] }
tempfile.workspace = true
tokio = { workspace = true, features = ["net", "test-util"] }
wiremock.workspace = true
tower.workspace = true

[lints]
workspace = true
