[package]
name = "adler-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
adler-core = { path = "../adler-core" }
libfuzzer-sys = "0.4.13"
serde_json = "1"

[workspace]

[[bin]]
name = "registry_json"
path = "fuzz_targets/registry_json.rs"
test = false
doc = false
bench = false

[[bin]]
name = "site_json"
path = "fuzz_targets/site_json.rs"
test = false
doc = false
bench = false

[[bin]]
name = "username_permute"
path = "fuzz_targets/username_permute.rs"
test = false
doc = false
bench = false
